lab1/Test/L1-A-11-44.cmm
struct {
};
int eDm47LDZ_Gd8Vm 
;
int Zaep ( struct L8mpGlj7Y23zCy _2sY , int ZjImeqMU_Idem7D 
  ) {
  struct v_oB80nxJw {
    float r_MrUFg , KQEJC [ 1293724375 ] = cw && GbukQwuaUSsc 
      <= k2ZtP3DFPgJ + zx_M * - Y8 [ jGp4v6FBv3Zf8 = eIxJc9jDh 
      || BvlRqslvb8 > ! ! sMs6HL0U2oKZ ( MVL && wHSnfXSshquOThhfc 
      == iY7c_pdpYAJeYE - - - - ! Qv3TCkOngrVjLo8JCD [ z_8oFve9 
      || w0SyEihUrF - ! ( aV1XWD6yE = b = ybj8PWMlV9DzxBe 
      = EenTOsQL != r9ip / AsKjQseAPu [ PqKJH4KUuhiKz3t3CT 
      >= rSoaVRsoHOM7 + ( Cjtctv6Pwvw5te7r8JT && IwnBbJpsShrs9 
      <= ( ! ( afpmTl - efZL5 / gzdCI8swq [ mdVxS8WpsKcFQG8j 
      / ( ( ldIXny >= EZwj + ( Euq = u_e = VxHZW_iMK2Zj 
      && yycXrGk0gwP8C - F * ( ( dIbPrC8sDf1BgM + lh9pNzhn3 
      / ( qKUdfzAh + - - O ( RUD5wXdodPYetMj , gQHFojJp7tFU0A9VOd 
      ) ) ) ) ) ) . hVcMGEKHeNSDQ . CwjE_V / rhb1ONTwcJ 
      ) + jt8ZiXd . k_OW != qL8msgyK3a5jDHQL51K <= ] ) ) 
      ) . hecDQezjSp ] * ! - mUlpN < ! JX5Jn2gXttHHJj1f5U 
      ) ] * 1286466524.1834116516 ) / WakJ ( ) - ! - 900267904 
      ] . tUKL ;
  }Q1D98mSZ26YgWZqRb3 >= ;
}
int i7VFX , yMzJAcmNz 

;
int ;
int 
int A3gxwNOP_cxNRshk ( ) {
  VT_P6HF13KHhJrgocq ;
  if ( Gs2SEFUSKNawozF )   FuyYTqz6AxtGmu3 ;
else {
    if ( yY0hav )     while ( c5eKO_ )     nTcEIcIlpvo 
      else ;

else     if ( EZXHiGGg )     return LKf5n6j2N6r4_S 
      ;


  }
}
